--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@
     --primary-color-variation:#CFF4FF;
     --secondary-color: #243453;
     --secondary-color-variation: #61718F;
-    --grey: B1B1B1;
+    --grey: #b1b1b1;
 }
 
 /* General Styles */
@@ -25,6 +25,8 @@ html {
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     width: 100vw;
     max-width: 100vw;
     height: 100vh;
@@ -45,7 +47,10 @@ button {
 
 header {
     display: flex;
+    justify-content: flex-end;
     align-items: center;
+    position: fixed;
+    top: 0;
 
     width: 100vw;
     height: 6rem;
@@ -57,6 +62,10 @@ header {
     background-color: var(--primary-color);
 }
 
+.header-logo{
+    margin-right: 55rem;
+}
+
 .header-logo__icon {
     font-size: 3.5rem;
     color: var(--background-color);
@@ -64,7 +73,9 @@ header {
 
 h1 {
     display: inline;
-    font-size: 3.2rem;
+
+    font-size: 3.3rem;
+    text-shadow: 0 2px 1px rgba(50, 50, 50, 0.8);
 }
 
 .header__decrypt-button > button {
@@ -83,7 +94,20 @@ h1 {
     background-color: var(--secondary-color);
 }
 
+.header__decrypt-button > button:hover {
+    color: #000129;
+    background-color: white;
+}
+
+.header__decrypt-button > button:active {
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
+}
+
 .header__menu-button > button{
+    margin-right: 20px;
+    margin-left: 10px;
+
     border: none;
     background-color: transparent;
 }
@@ -98,8 +122,93 @@ h1 {
 }
 
 .header__menu-icon:active {
-    color: var(--secondary-color);
+    color: white;
+}
+/* Main Chat Styles */
+
+main {
+    height: 100%;
 }
 
 /* Footer Styles */
 
+footer {
+    position: fixed;
+    bottom: 2.5rem;
+
+    width: 100vw;
+    height: 6rem;
+    padding: 3rem;
+}
+
+footer>form {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    width: 100%;
+}
+
+.input-user-message {
+    display: flex;
+    align-items: center;
+
+    width: 95%;
+    height: 4rem;
+    border: none;
+    border-radius: 30px;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+    margin: 0 10px;
+
+    background-color: var(--secondary-color);
+}
+
+.input-user-message>i {
+    font-size: 2rem;
+    margin-right: 10px;
+}
+
+.input-user-message>input {
+    width: 100%;
+    border: none;
+
+    font-family: var(--primary-color);
+    font-size: 1.6rem;
+    color: white;
+
+    background-color: transparent;
+    outline: none;
+    caret-color: white  ;
+}
+
+.input-user-message>input::placeholder{
+    font-family: var(--primary-font-family);
+    font-size: 1.6rem;
+    color: var(--secondary-color-variation);
+}
+
+.enter-user-message {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 4.2rem;
+    height: 4.2rem;
+    border: none;
+    border-radius: 50%;
+
+    font-size: 2rem;
+    color: white;
+
+    background-color: var(--primary-color);
+}
+
+.enter-user-message:hover {
+    color: var(--background-color);
+    background-color: white;
+}
+
+.enter-user-message:active {
+    background-color: var(--primary-color);
+}
