--- a/src/style.css
+++ b/src/style.css
@@ -56,6 +56,7 @@ header {
     height: 6rem;
     border-bottom:solid 1px var(--primary-color-variation) ;
     padding: 10px;
+    margin-bottom: 0.2rem;
 
     font-family: var(--secondary-font-family);
 
@@ -127,24 +128,50 @@ h1 {
 /* Main Chat Styles */
 
 main {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+
     height: 100%;
+    margin: 6rem 0;
+}
+
+.main-user-message__container {
+    min-width: 2.5rem;
+    max-width: 30rem;
+    width: fit-content;
+    height: auto;
+    min-height: 1.5rem;
+    border: none;
+    border-radius: 1.2rem;
+    padding: 1rem;
+    margin: 1rem;
+
+    background-color: var(--secondary-color);
+}
+
+.main-chat p {
+    font-size: 1.3rem;
 }
 
 /* Footer Styles */
 
 footer {
     position: fixed;
-    bottom: 2.5rem;
+    bottom: 0;
+    z-index: 1;
 
     width: 100vw;
     height: 6rem;
-    padding: 3rem;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    margin-top: 0.2rem;
 }
 
-footer>form {
+footer > form {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
 
     width: 100%;
 }
@@ -164,7 +191,7 @@ footer>form {
     background-color: var(--secondary-color);
 }
 
-.input-user-message>i {
+.input-user-message > i {
     font-size: 2rem;
     margin-right: 10px;
 }
@@ -174,7 +201,7 @@ footer>form {
     border: none;
 
     font-family: var(--primary-color);
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     color: white;
 
     background-color: transparent;
@@ -184,7 +211,7 @@ footer>form {
 
 .input-user-message>input::placeholder{
     font-family: var(--primary-font-family);
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     color: var(--secondary-color-variation);
 }
 
@@ -350,3 +377,104 @@ margin-right: 2rem;
     right: 2rem;
     bottom: 2rem;
 }
+
+/* Decrypt Chat Screen */
+
+.decrypt-chat__screen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 2;
+
+    width: 100vw;
+    height: 100vh;
+
+    background-color: rgba(0, 1, 41, 0.4)
+}
+
+.decrypt-chat__container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    position: relative;
+    bottom: 3rem;
+
+    width: 30.5rem;
+    height: 12.5rem;
+    border: none;
+    border-radius: 3.5rem;
+    padding-top: 1rem;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    padding-bottom: 1rem;
+
+    font-size: 1.5rem;
+    color: #000129;
+    text-align: center;
+
+    background-color: white;
+    box-shadow: 0 2px 10px 1px rgba(226, 226, 226, 0.8);
+}
+
+.decrypt-chat__title > i {
+    margin-right: 0.5rem;
+
+    font-size: 3rem;
+    color: var(--primary-color);
+}
+
+.decrypt-chat__title > h2 {
+    display: inline;
+
+    font-family: var(--secondary-font-family);
+    font-size: 2.8rem;
+    color: var(--background-color);
+}
+
+form.decrypt-chat__key {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    width: 100%;
+    height: 4rem;
+    border: none;
+    border-radius: 2.5rem;
+    padding: 0 1.5rem;
+
+    font-size: 2rem;
+    color: white;
+
+    background-color: var(--secondary-color);
+}
+
+form.decrypt-chat__key > input {
+    width: 100%;
+    border: none;
+    margin: 0.8rem;
+
+    font-size: 1.5rem;
+    color: white;
+    caret-color: white;
+    outline: none;
+    background-color: transparent;
+}
+
+form.decrypt-chat__key > input::placeholder {
+    color: var(--secondary-color-variation);
+}
+
+form.decrypt-chat__key > input::-webkit-inner-spin-button, form.decrypt-chat__key > input::-webkit--outer-button {
+    -webkit-appearance: none;
+}
+
+form.decrypt-chat__key > button {
+    border: none;
+
+    font-size: 2rem;
+    color: var(--primary-color);
+
+    background-color: transparent;
+}
+
