Añadiendoestilos en botones

--- a/src/style.css
+++ b/src/style.css
@@ -478,3 +478,10 @@ form.decrypt-chat__key > button {
     background-color: transparent;
 }
 
+form.decrypt-chat__key > button:hover {
+    color: white;
+}
+
+form.decrypt-chat__key > button:active {
+    color: var(--grey);
+}
