--- a/src/style.css
+++ b/src/style.css
@@ -302,7 +302,7 @@ margin-right: 2rem;
     font-size: 2rem;
     color: white;
 
-    background-color: var(--contrast-color);
+    background-color: var(--background-color);
     box-shadow: -2px 3px 3px rgba(50, 50, 50, 0.4);
 }
 
@@ -318,6 +318,20 @@ margin-right: 2rem;
     box-shadow: none;
 }
 
+.enter-button-2 {
+    color: var(--background-color);
+    background-color: white;
+}
+
+.enter-button-2:hover {
+    color: white;
+    background-color: var(--background-color);
+}
+
+.enter-button-2:active{
+    color: var(--primary-color);
+    background-color: var(--background-color);
+}
 .welcome-screen__encrypt-chat-container {
     display: flex;
     flex-direction: column;
@@ -498,7 +512,7 @@ form.decrypt-chat__key > button:active {
     align-items: center;
     align-self: flex-start;
     position: relative;
-    top: 7rem;
+    top: 1.2rem;
     right: -89.5rem;
 
     width: 3.5rem;
